--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <a href="https://x.com/"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><i class="fa-solid fa-envelope"></i></a>
             <a href="https://github.com/shnllse"><i class="fa-brands fa-github"></i></i></a>
-            <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><i class="fa-brands fa-google-drive"></i></i></i></a>
+            <a href="https://drive.google.com/drive/folders/10PegBC9Yt-aTFpCNcCd76eOPDH-_X5sb?usp=drive_link"><i class="fa-brands fa-google-drive"></i></i></i></a>
         </div>
         <div class="footerNav">
             <ul>
